--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Arek</a></h1>
+     <!-- <h1><a href="index.html">Arek</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>My name is Arkadiusz (just Arek) - Ph.D. Engineer in Technical Science. 
@@ -408,41 +408,45 @@
           <div class="resume-item pb-0">
             <h4>Alice Barkley</h4>
             <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
+            <!--<p>
             <ul>
               <li>Portland par 127,Orlando, FL</li>
               <li>(123) 456-7891</li>
               <li>alice.barkley@example.com</li>
             </ul>
-            </p>
+            </p>-->
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Ph.D Eng. &amp; Technical Science</h4>
+            <h5>2011</h5>
+            <p><em>THE TECHNICAL UNIVERSITY OF LODZ</em></p>
+            <p>"Neural model of relative mass flows of water and sugar in an installation for crystallizing 
+              and centrifuging A massecuite"</p>
           </div>
-          <div class="resume-item">
+          <!--<div class="resume-item">
             <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
             <h5>2010 - 2014</h5>
             <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
             <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-          </div>
+          </div>-->
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Deep Learning, Data Analyst, Python Developer</h4>
+
+            <h5>2022 - Present</h5>
+            <p><em>Freelancer</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Taking part in Python development activities.</li>
+              <li>Conducting software analysis, programming, testing, and debugging.  </li>
+              <li>Object-Oriented programming.</li>
+              <li>Analysing large sets of data and information, drawing relevant conclusions.</li>
+              <li>Data Modelling, Data Manipulation.</li>
+              <li>Developing Artificial Neural Nets.</li>
             </ul>
             </p>
           </div>
@@ -482,18 +486,18 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <p> <img src="assets/img/it303.png"  alt="" width="" height=""></p>
+            <p> <img src="assets/img/ai-900.png"  alt="" width="" height=""></p>
           </div></div>
       </div>
 
           <div class="row">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-              <p> <img src="assets/img/it303.png"  alt="" width="" height=""></p>
+              <p> <img src="assets/img/firebrand.png"  alt="" width="" height=""></p>
             </div>
 
             <div class="row">
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <p> <img src="assets/img/it303.png"  alt="" width="" height=""></p>
+                <p> <img src="assets/img/AZ-900.png"  alt="" width="" height=""></p>
               </div>
 
               <div class="row">
