--- a/index.html
+++ b/index.html
@@ -416,9 +416,12 @@ Working as a part of the team and individually,
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary:</h3>
+          <h3 class="resume-title">Summary:</h3>
           <div class="resume-item pb-0">
             <!--<h4>Alice Barkley</h4>-->
+            <p>
+              <img src="assets/img/aj.jpg"  width="130" height="auto">
+            </p>
             <p><em>Innovative and deadline-driven Keras Developer with experience designing and developing Deep Learning Models from initial concept to final, polished deliverable.</em></p>
             <!--<p>
             <ul>
@@ -566,7 +569,7 @@ Working as a part of the team and individually,
 
             
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                  <p> <img src="assets/img/itf.png"  class="responsive"></p>
+                  <p> <img src="assets/img/flask.png"  class="responsive"></p>
                 </div>
               
 
